# wab_project

./: docker-compose.yml
base/: pyproject.toml
base/src/: auth.py  database.py  main.py  models.py  mqqt.py  register.py  schemas.py  user.py  warehouse.py
db_consumer/: README.md  pyproject.toml
db_consumer/src/: database.py  main.py  models.py
main/: pyproject.toml
main/src/: main.py  test.py
main/src/models/: models.py
main/src/routes/: auth.py
postgres/: init_review.sql
