[project]
name = "db_consumer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pymongo>=4.6.1",
    "pika>=1.3.2",
    "sqlalchemy>=2.0.24",
    "psycopg2>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
